--- a/package.json
+++ b/package.json
@@ -66,9 +66,10 @@
     "@types/video.js": "^7.3.50",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.32.0",
     "formik": "^2.2.9",
+    "prettier": "^3.0.2",
     "react-chartjs-2": "^4.3.1",
     "react-input-mask": "^2.0.4",
     "video.js": "^7.20.3"
