--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "axios": "^0.21.1",
+    "material-react-table": "^1.14.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.41",
     "notistack": "^2.0.8",
