dependancy installing issue fixed

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
     "axios": "^0.21.1",
+    "eslint-config-react-app": "^6.0.0",
     "material-react-table": "^1.14.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.41",
@@ -67,7 +69,7 @@
     "@types/video.js": "^7.3.50",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.32.0",
     "formik": "^2.2.9",
     "prettier": "^3.0.2",
