--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react-flatpickr": "^3.8.8",
     "@types/react-input-mask": "^3.0.2",
     "@types/react-router-dom": "^5.3.3",
