--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "set PORT=3006 && react-scripts start",
-    "build": "react-scripts build",
+    "start": "set PORT=3006 && react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
