--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "scripts": {
     "start": "set PORT=3006 && react-scripts --openssl-legacy-provider start",
     "build": "react-scripts --openssl-legacy-provider build",
+    "dev": "set PORT=3006 && react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
